<resources>
    <string name="app_name">I want to Code with somebody</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">next</string>
    <string name="submit">submit</string>

    <!-- Strings related to gender -->
    <string name="gender_question">Gender:</string>
    <string name="female_button">Female</string>
    <string name="male_button">Male</string>
    <string name="non_binary_button">Non-binary</string>

    <!-- Strings related to education level. -->
    <string name="education_level_question">Education Level:</string>
    <string name="undergraduate_button">Undergraduate</string>
    <string name="graduate_button">Graduate</string>
    <string name="other_button">Other</string>

    <!-- Strings related to programming level. -->
    <string name="programming_level_question">Programming Level:</string>
    <string name="beginner_button">Beginner</string>
    <string name="intermediate_button">Intermediate</string>
    <string name="advanced_button">Advanced</string>
    <string name="expert_button">Expert</string>

    <!-- Strings related to Practice Topics. -->
    <string name="objectives_question">Practice topics you\'re interested in:</string>
    <string name="data_structures_button">Data Structures</string>
    <string name="product_management_button">Product Management</string>
    <string name="behavioral_button">Behavioral</string>
    <string name="system_design_button">System Design</string>
    <string name="front_end_button">Front-end</string>
    <string name="data_science_button">Data Science</string>

    <!-- Strings related to Programming Languages. -->
    <string name="language_question">Programming languages you\'re interested in:</string>
    <string name="java_button">Java</string>
    <string name="python_button">Python</string>
    <string name="javascript_button">JavaScript</string>
    <string name="c_button">C</string>
    <string name="php_button">PHP</string>
    <string name="swift_button">Swift</string>
    <string name="c_sharp_button">C#</string>
    <string name="c_plus_plus_button">C++</string>

    <!-- Strings related to Target companies. -->
    <string name="target_company_question">Companies you\'re interested in:</string>
    <string name="amazon_button">Amazon</string>
    <string name="apple_button">Apple</string>
    <string name="chevron_button">Chevron</string>
    <string name="facebook_button">Facebook</string>
    <string name="google_button">Google</string>
    <string name="jpmorgan_button">JP Morgan Chase</string>
    <string name="microsoft_button">Microsoft</string>
    <string name="square_button">Square</string>
    <string name="uber_button">Uber</string>

    <!-- Strings related to Calendar Days. -->
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

    <!-- Strings related to Calendar Times. -->
    <string name="nine_am">09:00 AM</string>
    <string name="eleven_am">11:00 AM</string>
    <string name="one">01:00 PM</string>
    <string name="three">03:00 PM</string>
    <string name="five">05:00 PM</string>
    <string name="seven">07:00 PM</string>
    <string name="nine_pm">09:00 PM</string>
    <string name="eleven_pm">11:00 PM</string>


</resources>
